Garbage collection event for CMS has wrong cause for System.gc()

XMLWordPrintable

    • gc
    • b46
    • Verified

        The vm/gc/collector/garbage_collection event has the wrong cause when System.gc() is used to trigger a concurrent CMS collection (by setting -XX:+ExplicitGCInvokesConcurrent).

        The expected cause is "System.gc()" but "CMS Concurrent Mark" is reported.

              Assignee:
              Erik Helin
              Reporter:
              Erik Helin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: