8013934: Garbage collection event for CMS has wrong cause for System.gc() Reviewed-by: brutisso, jwilhelm